Huge patch for MAHOUT-379. See JIRA for more complete details.
git-svn-id: https://svn.apache.org/repos/asf/lucene/mahout/trunk@936183 13f79535-47bb-0310-9956-ffa450edef68